making changes on pages

--- a/public/stylesheets/components/_aside_panel.scss
+++ b/public/stylesheets/components/_aside_panel.scss
@@ -19,6 +19,9 @@
 .aside_span .lead_info.aside_lead_hide{
   display: none;
 }
+.aside_span .lead_chevron.lead_chevron_hide{
+  display: none;
+}
 .app-sidebar_toggle{
   color: #fff;
   transform: background-color 0.3s ease;
