--- a/templates/views/padding-schedules.hbs
+++ b/templates/views/padding-schedules.hbs
@@ -19,8 +19,8 @@
                             <div class="col-2">
                                 <!--button class="btn btn-primary mt-3 d-flex justify-content-center">Complete</button-->
                                 <!--input type="radio" class="form-control" name="" id="" aria-haspopup="true"-->
-                                <div class="form-group">
-                                    <input type="radio" class="form-control mt-4 update radio" name="titles" value='{{_id}}' id='{{_id}}' title="Updates">
+                                <div class="form-group mt-4">
+                                    <input type="radio" class="form-control update radio" name="titles" value='{{_id}}' id='{{_id}}' title="Updates">
                                     <span class=""></span>
                                 </div>
                             </div>
