--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -25,13 +25,14 @@
                                         <p class="text-muted disabled" style="font-size:11px;">{{prettifyDate created}}</p>
                                     </div>
                                     <div class="col-2">
-                                        <div class="form-group">
+                                        <div class="form-group mt-4">
                                             {{#if updated}}
-                                                <a href="#" role="button" class="btn mt-3 times disabled" aria-disabled="true"><span class="fa fa-times mt-3"></span> </a>
+                                                <a role="button" class="times disabled" aria-disabled="true"><span class="fa fa-times mt-3"></span> </a>
                                             {{else}}
                                                 <!--input type="radio" class="form-control mt-3 radio" name="titles" value="{{_id}}" id='{{_id}}' title="upadate"-->
                                                 <!--a-- class="btn btn-light text-muted">Comp</a-->
-                                                <a href="#" class="btn mt-3 check" role="button" ><span class="fa fa-check mt-3"></span> </a>
+                                                <a onclick="dd();" href="#" class="check" role="button" ><span class="fa fa-check mt-3"></span> </a>
+                                                <p class="" style="font-size:11px;">{{end_date}}</p>
                                             {{/if}}
                                         </div>
                                     </div>
