--- a/templates/views/new-schedule.hbs
+++ b/templates/views/new-schedule.hbs
@@ -4,17 +4,37 @@
         <div class="col-md-6">
             <form method="POST" class="p-4" action="/add-schedule">
                 <div class="form-group">
-                    <label for="titles"></label>
+                    <input type="hidden" name="completed" id="completed" value="false" class="form-control" placeholder="Title" required>
+                </div>
+                <div class="form-group">
                     <input type="text" name="titles" id="titles" class="form-control" placeholder="Title" required>
                 </div>
                 <div class="form-group">
-                    <label for=""></label>
                     <textarea class="form-control" name="notes" placeholder="Note" autofocus required></textarea>
                 </div>
+
                 <div class="form-group">
-                    <label for="titles"></label>
-                    <input type="hidden" name="completed" id="completed" value="false" class="form-control" placeholder="Title" required>
+                    <div class="form-row">
+                        <div class="col">
+                            <input class="form-control" id="start_date" placeholder="Start Date" name="start_date" type="text" required>
+                        </div>
+                        <div class="col">
+                            <input class="form-control" id="end_date" placeholder="End Date" name="end_date" type="text" required>
+                        </div>
+                    </div>
                 </div>
+
+                <!--div-- class="form-group">
+                    <div class="form-row">
+                        <div class="col">
+                            <input type="date" class="form-control" placeholder="First name">
+                        </div>
+                        <div class="col">
+                            <input type="date" class="form-control" placeholder="Last name">
+                        </div>
+                    </div>
+                </div-->
+
                 <div class="form-group">
                     <button class="btn btn-light" type="submit">Save <span class="fa fa-save"></span> </button>
                     <button class="btn btn-reset" type="reset">Clear <span class="fa fa-sync-alt"></span> </button>
