--- a/templates/views/layout.hbs
+++ b/templates/views/layout.hbs
@@ -30,17 +30,35 @@
                     </div>
                     <div class="row aside_span">
                         <div class="col-12">
+                            <div class="">
+                                <div class="row no-gutters">
+                                    <div class="col-2 mt-2">
+                                        <span class="fa fa-indent text-white"></span>
+                                    </div>
+                                    <div class="col lead_info mt-2">
+                                        <div class="">
+                                            <a class="card-text text-light text-decoration-none" href="/" role="button">
+                                                <small class="text">Home</small>
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <!--div-- class="col-2 mt-2 lead_chevron">
+                                        <a class="text-decoration-none text-white text-left" role="button" data-toggle="collapse" data-target="#collapseOnes" aria-expanded="true" aria-controls="collapseOnes">
+                                            <span class="fa fa-chevron-down float-right text-light"></span>
+                                        </a>
+                                    </div-->
+                                </div>
+                            </div>
                             <div class="accordion" id="accordionExample">
                                 <div class="One">
                                     <div class="row no-gutters">
                                         <div class="col-2 mt-2">
-                                            <!--img src="..." class="card-img" alt="..."-->
-                                            <span class="fa fa-hand-middle-finger text-white"></span>
+                                            <span class="fa fa-tasks text-white"></span>
                                         </div>
                                         <div class="col lead_info mt-2">
                                             <div class="">
                                                 <a class="card-text text-light text-decoration-none" data-toggle="collapse" data-target="#collapseOnes" role="button">
-                                                    <small class="text">Active</small>
+                                                    <small class="text">Schedules</small>
                                                 </a>
                                             </div>
                                         </div>
@@ -56,12 +74,12 @@
                                             <div class="col-12">
                                                 <div class="row no-gutters">
                                                     <div class="col-2 mt-1 pb-1">
-                                                        <span class="fa fa-school text-secondary"></span>
+                                                        <span class="fa fa-terminal text-white-50"></span>
                                                     </div>
                                                     <div class="col lead_info mt-1 pb-1">
                                                         <div class="">
-                                                            <a class="text-decoration-none text-white text-left" role="button" href="/padding-schedules">
-                                                                <small class="text">Select</small>
+                                                            <a class="text-decoration-none text-white text-left" role="button" href="add-schedule">
+                                                                <small class="text">Add Schedule</small>
                                                             </a>
                                                         </div>
                                                     </div>
@@ -77,17 +95,17 @@
                                         <div class="row">
                                             <div class="col-12">
                                                 <div class="row no-gutters">
-                                                    <div class="col-2 mt-2">
-                                                        <span class="fa fa-book text-secondary"></span>
+                                                    <div class="col-2 mt-1 pb-1">
+                                                        <span class="fa fa-door-open text-white-50"></span>
                                                     </div>
-                                                    <div class="col lead_info mt-2">
+                                                    <div class="col lead_info mt-1 pb-1">
                                                         <div class="">
-                                                            <a class="card-text text-light text-decoration-none" href="/completed-schedules" role="button">
-                                                                <small class="text">Activate</small>
+                                                            <a class="card-text text-light text-decoration-none" href="/padding-schedules" role="button">
+                                                                <small class="text">Active Schedules</small>
                                                             </a>
                                                         </div>
                                                     </div>
-                                                    <div class="col-2 mt-2 lead_chevron">
+                                                    <div class="col-2 mt-1 pb-1 lead_chevron">
                                                         <a class="text-decoration-none text-white text-left" role="button" data-toggle="collapse" data-target="#collapseOnes" aria-expanded="true" aria-controls="collapseOnes">
                                                             <span class="fa fa-chevron-right float-right text-light"></span>
                                                         </a>
@@ -96,13 +114,33 @@
                                             </div>
                                         </div>
 
-                                    </div>
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class="row no-gutters">
+                                                    <div class="col-2 mt-1 pb-1">
+                                                        <span class="fa fa-door-closed text-white-50"></span>
+                                                    </div>
+                                                    <div class="col lead_info mt-1 pb-1">
+                                                        <div class="">
+                                                            <a class="card-text text-light text-decoration-none" href="/completed-schedules" role="button">
+                                                                <small class="text">Done Schedules</small>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-2 mt-1 pb-1 lead_chevron">
+                                                        <a class="text-decoration-none text-white text-left" role="button" data-toggle="collapse" data-target="#collapseOnes" aria-expanded="true" aria-controls="collapseOnes">
+                                                            <span class="fa fa-chevron-right float-right text-light"></span>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div><!-- End of One accordion-->
 
                                     <div class="Two">
                                         <div class="row no-gutters">
                                             <div class="col-2 mt-2 p-0">
-                                                <!--img src="..." class="card-img" alt="..."-->
-                                                <span class="fa fa-shoe-prints"></span>
+                                                <span class="fa fa-user-tag text-light"></span>
                                             </div>
                                             <div class="col lead_info mt-2">
                                                 <div class="">
