--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -3,11 +3,11 @@
     <a href="#" class="app-sidebar_toggle" data-toggle="sidebar" aria-label="Hide Sidebar">
         <span class="fa fa-bars"></span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!--button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
+    </button-->
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <!--div-- class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
                 <a class="nav-link text-light" href="/">All <span class="sr-only">(current)</span></a>
@@ -21,7 +21,7 @@
             <li class="nav-item">
                 <a class="nav-link text-light" href="completed-schedules">Completed</a>
             </li>
-            <!--li class="nav-item dropdown">
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Dropdown
                 </a>
@@ -31,12 +31,12 @@
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-            </li-->
+            </li>
 
         </ul>
-        <!--form-- class="form-inline my-2 my-lg-0">
+        <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
-        </form-->
-    </div>
+        </form>
+    </div-->
 </nav>
